fix LoadMoreBtn on tablet version

--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -109,6 +109,10 @@
     font-size: 40px;
     line-height: 49px;
   }
+  .loadMoreBtn {
+    max-width: 344px;
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1440px) {
